--- a/DementeNatural-Movil/app/src/main/AndroidManifest.xml
+++ b/DementeNatural-Movil/app/src/main/AndroidManifest.xml
@@ -2,6 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -43,7 +55,7 @@
             android:name=".Menu_Admin"
             android:exported="false" />
         <activity
-            android:name=".Registro"
+            android:name=".Menu_Trabajador"
             android:exported="false" />
         <activity
             android:name=".login"
@@ -52,7 +64,7 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".Menu_Trabajador"
+            android:name=".Registro"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
